build/log/idf_py_stdout_output_96121
[1/9] Building C object esp-idf/lvgl/CMakeFiles/__idf_lvgl.dir/src/extra/lv_extra.c.obj
FAILED: esp-idf/lvgl/CMakeFiles/__idf_lvgl.dir/src/extra/lv_extra.c.obj 
/home/lagoria/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DLV_ATTRIBUTE_FAST_MEM=IRAM_ATTR -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -I/home/lagoria/workspace/esp/project/esp32s3/master/build/config -I/home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl -I/home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl/src -I/home/lagoria/workspace/esp/project/esp32s3/master/components -I/home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl/examples -I/home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl/demos -I/home/lagoria/workspace/esp/esp-idf/components/newlib/platform_include -I/home/lagoria/workspace/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lagoria/workspace/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/lagoria/workspace/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lagoria/workspace/esp/esp-idf/components/freertos/esp_additions/include -I/home/lagoria/workspace/esp/esp-idf/components/esp_hw_support/include -I/home/lagoria/workspace/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lagoria/workspace/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/lagoria/workspace/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/lagoria/workspace/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/lagoria/workspace/esp/esp-idf/components/heap/include -I/home/lagoria/workspace/esp/esp-idf/components/log/include -I/home/lagoria/workspace/esp/esp-idf/components/soc/include -I/home/lagoria/workspace/esp/esp-idf/components/soc/esp32s3/. -I/home/lagoria/workspace/esp/esp-idf/components/soc/esp32s3/include -I/home/lagoria/workspace/esp/esp-idf/components/hal/esp32s3/include -I/home/lagoria/workspace/esp/esp-idf/components/hal/include -I/home/lagoria/workspace/esp/esp-idf/components/hal/platform_port/include -I/home/lagoria/workspace/esp/esp-idf/components/esp_rom/include -I/home/lagoria/workspace/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/lagoria/workspace/esp/esp-idf/components/esp_rom/esp32s3 -I/home/lagoria/workspace/esp/esp-idf/components/esp_common/include -I/home/lagoria/workspace/esp/esp-idf/components/esp_system/include -I/home/lagoria/workspace/esp/esp-idf/components/esp_system/port/soc -I/home/lagoria/workspace/esp/esp-idf/components/esp_system/port/include/private -I/home/lagoria/workspace/esp/esp-idf/components/xtensa/include -I/home/lagoria/workspace/esp/esp-idf/components/xtensa/esp32s3/include -I/home/lagoria/workspace/esp/esp-idf/components/lwip/include -I/home/lagoria/workspace/esp/esp-idf/components/lwip/include/apps -I/home/lagoria/workspace/esp/esp-idf/components/lwip/include/apps/sntp -I/home/lagoria/workspace/esp/esp-idf/components/lwip/lwip/src/include -I/home/lagoria/workspace/esp/esp-idf/components/lwip/port/esp32/include -I/home/lagoria/workspace/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/lagoria/workspace/esp/esp-idf/components/esp_timer/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/lagoria/workspace/esp/project/esp32s3/master=. -fmacro-prefix-map=/home/lagoria/workspace/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/lvgl/CMakeFiles/__idf_lvgl.dir/src/extra/lv_extra.c.obj -MF esp-idf/lvgl/CMakeFiles/__idf_lvgl.dir/src/extra/lv_extra.c.obj.d -o esp-idf/lvgl/CMakeFiles/__idf_lvgl.dir/src/extra/lv_extra.c.obj -c /home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl/src/extra/lv_extra.c
/home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl/src/extra/lv_extra.c: In function 'lv_extra_init':
/home/lagoria/workspace/esp/project/esp32s3/master/components/lvgl/src/extra/lv_extra.c:74:25: error: expected ';' before '}' token
   74 |     lv_split_jpeg_init()
      |                         ^
      |                         ;
......
   89 | }
      | ~                        
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/lagoria/workspace/esp/project/esp32s3/master/build/bootloader/esp-idf/esptool_py && /home/lagoria/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/lagoria/workspace/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/lagoria/workspace/esp/project/esp32s3/master/build/bootloader/bootloader.bin
Bootloader binary size 0x5030 bytes. 0x2fd0 bytes (37%) free.
ninja: build stopped: subcommand failed.
